[package]
name = "tx_change_bridge_pool"
description = "WASM bond transaction"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
namada_tx_prelude.workspace = true
wee_alloc.workspace = true
getrandom.workspace = true

[lib]
crate-type = ["cdylib"]